Recreated div and general layout in html

--- a/index.html
+++ b/index.html
@@ -2,18 +2,44 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Turtle Talk</title>
+  <title>Movie Info</title>
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-<div class="poster"></div>
-<div>
-  <div>
+  <div class="search">
+  </div>
+
+  <div class="result">
+  </div>
+
+  <div class="dropDown">
+
+    <div class="leftSide">
+      <div class="title">
+        <div class="movieName">#MovieTitle</div>
+        <div class="subInfo">
+          <span class="year">Year: </span>
+          <span class="runTime">Run Time: </span>
+        </div>
+      </div>
+
+      <div class="summary">Movie Plot: </div>
+
+      <div class="otherDetails">Other Details: </div>
+    </div>
+
+    <div class="poster">Poster URL
+    </div>
+
+  </div>
+
+
+
+  <!-- <div>
     <div class="intro">
       <div class="intro-background">
-          <p>Let the turtle tell you about your favorite movie.
             <form role="form">
-              <div class="form-group">
+              <div class="input">
                 <label for="inputMovie">Your favorite movie</label>
                 <input type="movie" class="form-control" id="movie" placeholder="Enter favorite movie">
               </div>
@@ -39,7 +65,7 @@
 
   <p>He said, "<span class="plot"></span> I think you'd really like it!"
 
-</div>
+</div> -->
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script type="text/javascript" src="js/main.js"></script>
